--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
-    "typescript": "^5.5.3"
+    "eslint": "9.x",
+    "globals": "^15.8.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
   }
 }
