--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "drizzle-orm": "^0.32.0",
+    "express": "^4.19.2",
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "drizzle-kit": "^0.23.0",
     "eslint": "9.x",
     "globals": "^15.8.0",
     "typescript": "^5.5.3",
