--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   },
